[gd_scene load_steps=45 format=3 uid="uid://cw7g6vmhxu1rt"]

[ext_resource type="Texture2D" uid="uid://cctsd1iiqjaqu" path="res://assets/raum_fenster_tafel.png" id="1_2fqd0"]
[ext_resource type="PackedScene" uid="uid://eq5gcjrx0xrk" path="res://scenes/function scenes/lehrer_pc.tscn" id="2_t8pa8"]
[ext_resource type="PackedScene" uid="uid://bbmhqp1w3igc6" path="res://scenes/function scenes/tisch_pc.tscn" id="3_3s4ya"]
[ext_resource type="Texture2D" uid="uid://c5glljkskexjo" path="res://assets/stickynote_klein.png" id="4_l5d7q"]
[ext_resource type="PackedScene" uid="uid://kw7le5116cb6" path="res://scenes/hauptszenen/player.tscn" id="5_2fqd0"]
[ext_resource type="Texture2D" uid="uid://cijjrgs1bauh5" path="res://assets/e_key.png" id="6_f0nvo"]
[ext_resource type="Texture2D" uid="uid://br4y5csae6wue" path="res://assets/stickynote_gross.png" id="7_ehfqm"]
[ext_resource type="Script" uid="uid://xny6j3pufm3p" path="res://scripts/area_stickynote_r1_2.gd" id="8_twcbh"]
[ext_resource type="Script" uid="uid://cexla0qgglmpc" path="res://scripts/computer_schueler_r1_2.gd" id="9_2fqd0"]
[ext_resource type="Texture2D" uid="uid://dk4tbohdja2dn" path="res://assets/anmeldebildschirm.png" id="10_f0nvo"]
[ext_resource type="Texture2D" uid="uid://5kqb6ypqwm0r" path="res://assets/katze_bild_screen.png" id="11_ehfqm"]
[ext_resource type="Texture2D" uid="uid://c1o7giuq8kckw" path="res://assets/nur_mit_cd_screen.png" id="12_twcbh"]
[ext_resource type="Texture2D" uid="uid://dgo8ae4nfx0xs" path="res://assets/cd.png" id="13_ehfqm"]
[ext_resource type="Texture2D" uid="uid://bc6524d131dcf" path="res://assets/pacman_mit_ziel.png" id="13_t4c5w"]
[ext_resource type="Script" uid="uid://dliqbk266jm4w" path="res://scripts/cd_area.gd" id="14_twcbh"]
[ext_resource type="Texture2D" uid="uid://gn0xat2v2lb7" path="res://assets/lehrer_pc_passwort.png" id="14_tyt5f"]
[ext_resource type="Script" uid="uid://62pey0gabpl4" path="res://scripts/door_r1_2.gd" id="15_twcbh"]
[ext_resource type="Texture2D" uid="uid://ci81pm8qw3pmi" path="res://assets/r1_tafelanschrift.png" id="17_t4c5w"]
[ext_resource type="Script" uid="uid://bs1b08piafne" path="res://scripts/r1_tafel.gd" id="18_dudi0"]
[ext_resource type="PackedScene" uid="uid://b3hkqyixr8lat" path="res://scenes/hauptszenen/player_small_2.tscn" id="20_24am0"]
[ext_resource type="Script" uid="uid://bqmr13wk1csab" path="res://scripts/ziel_area.gd" id="21_tyt5f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1l7m5"]
size = Vector2(106, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_1l7m5"]
radius = 56.0

[sub_resource type="CircleShape2D" id="CircleShape2D_of1q4"]
radius = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkbbg"]
size = Vector2(37, 25)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_db4pr"]
a = Vector2(435, 87)
b = Vector2(345, 90)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3s0c4"]
a = Vector2(630, 96)
b = Vector2(435, 87)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_rrmnj"]
a = Vector2(365, 290)
b = Vector2(345, 93)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6v8em"]
a = Vector2(641, 287)
b = Vector2(367, 289)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kvlqp"]
a = Vector2(444, 248)
b = Vector2(450, 287)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_vv50e"]
a = Vector2(405, 244)
b = Vector2(362, 250)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_7y3y1"]
a = Vector2(398, 180)
b = Vector2(404, 244)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_7n0ib"]
a = Vector2(433, 176)
b = Vector2(398, 179)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_wswvg"]
a = Vector2(440, 215)
b = Vector2(432, 176)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_c4msv"]
a = Vector2(439, 128)
b = Vector2(397, 130)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_p02ow"]
a = Vector2(438, 128)
b = Vector2(435, 88)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_urdnu"]
a = Vector2(487, 132)
b = Vector2(484, 91)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jyybj"]
a = Vector2(487, 132)
b = Vector2(579, 134)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_r4r00"]
a = Vector2(642, 286)
b = Vector2(632, 98)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_b80xn"]
a = Vector2(529, 213)
b = Vector2(441, 215)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_lsost"]
a = Vector2(532, 250)
b = Vector2(529, 214)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_wravn"]
a = Vector2(587, 180)
b = Vector2(491, 181)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_k5hca"]
a = Vector2(594, 248)
b = Vector2(586, 182)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_70ljj"]
a = Vector2(592, 248)
b = Vector2(533, 249)

[node name="raum_1_2" type="Node2D"]

[node name="RaumFensterTafel" type="Sprite2D" parent="."]
position = Vector2(500, 250)
texture = ExtResource("1_2fqd0")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(500, 248)
zoom = Vector2(1.15, 1.15)

[node name="boundaries" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="boundaries"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="boundaries/StaticBody2D"]
build_mode = 1
polygon = PackedVector2Array(187, 292, 813, 293, 1000, 481, 1000, 499, 0, 500, 0, 478)

[node name="objekte" type="Node2D" parent="."]
y_sort_enabled = true

[node name="lehrer_pc" parent="objekte" instance=ExtResource("2_t8pa8")]
position = Vector2(760, 384)

[node name="tisch_pc" parent="objekte" instance=ExtResource("3_3s4ya")]
position = Vector2(309, 378)
scale = Vector2(0.475, 0.475)

[node name="tisch_pc2" parent="objekte" instance=ExtResource("3_3s4ya")]
position = Vector2(508, 378)
scale = Vector2(0.475, 0.475)

[node name="tisch_pc3" parent="objekte" instance=ExtResource("3_3s4ya")]
position = Vector2(378, 298)
scale = Vector2(0.475, 0.475)

[node name="tisch_pc4" parent="objekte" instance=ExtResource("3_3s4ya")]
position = Vector2(571, 298)
scale = Vector2(0.475, 0.475)

[node name="StickynoteKlein" type="Sprite2D" parent="objekte"]
position = Vector2(256, 200)
scale = Vector2(0.0487879, 0.0487879)
texture = ExtResource("4_l5d7q")

[node name="player" parent="objekte" instance=ExtResource("5_2fqd0")]
position = Vector2(142, 411)

[node name="logik" type="Node2D" parent="."]

[node name="stickynote" type="Node2D" parent="logik"]
process_mode = 3

[node name="EKey" type="Sprite2D" parent="logik/stickynote"]
visible = false
position = Vector2(248, 152)
scale = Vector2(0.365, 0.365)
texture = ExtResource("6_f0nvo")

[node name="stickynote_gross" type="Sprite2D" parent="logik/stickynote"]
visible = false
position = Vector2(544, 200)
scale = Vector2(0.400076, 0.400076)
texture = ExtResource("7_ehfqm")

[node name="Area2D" type="Area2D" parent="logik/stickynote"]
collision_layer = 4
collision_mask = 4
script = ExtResource("8_twcbh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="logik/stickynote/Area2D"]
position = Vector2(251, 304)
shape = SubResource("RectangleShape2D_1l7m5")

[node name="schliessen" type="Button" parent="logik/stickynote"]
visible = false
offset_left = 384.0
offset_top = 432.0
offset_right = 640.0
offset_bottom = 464.0
theme_override_constants/outline_size = 5
text = "Schließen"

[node name="computer_lehrer" type="Node2D" parent="logik"]

[node name="door" type="Node2D" parent="logik"]
process_mode = 3

[node name="Area2D" type="Area2D" parent="logik/door"]
collision_layer = 4
collision_mask = 4
script = ExtResource("15_twcbh")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="logik/door/Area2D"]
polygon = PackedVector2Array(65, 415, 157, 324, 156, 348, 65, 437)

[node name="computer_schueler" type="Node2D" parent="logik"]
process_mode = 3

[node name="EKey" type="Sprite2D" parent="logik/computer_schueler"]
visible = false
position = Vector2(352, 272)
scale = Vector2(0.365, 0.365)
texture = ExtResource("6_f0nvo")

[node name="Area2D" type="Area2D" parent="logik/computer_schueler"]
collision_layer = 4
collision_mask = 4
script = ExtResource("9_2fqd0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="logik/computer_schueler/Area2D"]
position = Vector2(352, 400)
shape = SubResource("CircleShape2D_1l7m5")

[node name="schliessen" type="Button" parent="logik/computer_schueler"]
visible = false
offset_left = 384.0
offset_top = 432.0
offset_right = 640.0
offset_bottom = 464.0
theme_override_constants/outline_size = 5
text = "Schließen"

[node name="screens" type="Node2D" parent="logik/computer_schueler"]

[node name="login screen" type="Sprite2D" parent="logik/computer_schueler/screens"]
visible = false
position = Vector2(448, 200)
scale = Vector2(0.36, 0.36)
texture = ExtResource("10_f0nvo")

[node name="KatzeBildschirm" type="Sprite2D" parent="logik/computer_schueler/screens"]
visible = false
position = Vector2(448, 200)
scale = Vector2(0.36, 0.36)
texture = ExtResource("11_ehfqm")

[node name="NurMitCdScreen" type="Sprite2D" parent="logik/computer_schueler/screens"]
visible = false
position = Vector2(448, 200)
scale = Vector2(0.36, 0.36)
texture = ExtResource("12_twcbh")

[node name="PacmanMitZiel" type="Sprite2D" parent="logik/computer_schueler/screens"]
visible = false
position = Vector2(504, 208)
scale = Vector2(0.377572, 0.377572)
texture = ExtResource("13_t4c5w")

[node name="LehrerPcPasswort" type="Sprite2D" parent="logik/computer_schueler/screens"]
visible = false
position = Vector2(504, 208)
scale = Vector2(0.374486, 0.374486)
texture = ExtResource("14_tyt5f")

[node name="login" type="Node2D" parent="logik/computer_schueler"]
visible = false

[node name="LineEdit_user" type="LineEdit" parent="logik/computer_schueler/login"]
offset_left = 491.0
offset_top = 152.0
offset_right = 603.0
offset_bottom = 174.0
theme_override_font_sizes/font_size = 10
flat = true

[node name="LineEdit_pass" type="LineEdit" parent="logik/computer_schueler/login"]
offset_left = 492.0
offset_top = 172.0
offset_right = 604.0
offset_bottom = 194.0
theme_override_font_sizes/font_size = 10
flat = true

[node name="einloggen" type="Button" parent="logik/computer_schueler/login"]
offset_left = 448.0
offset_top = 240.0
offset_right = 576.0
offset_bottom = 272.0
theme_override_constants/outline_size = 5
text = "Einloggen"

[node name="tafel" type="Node2D" parent="logik"]
process_mode = 3

[node name="R1Tafelanschrift" type="Sprite2D" parent="logik/tafel"]
visible = false
position = Vector2(505, 195)
scale = Vector2(0.31197, 0.31197)
texture = ExtResource("17_t4c5w")

[node name="EKey" type="Sprite2D" parent="logik/tafel"]
visible = false
position = Vector2(905, 108)
scale = Vector2(0.365, 0.365)
texture = ExtResource("6_f0nvo")

[node name="Area2D" type="Area2D" parent="logik/tafel"]
collision_layer = 4
collision_mask = 4
script = ExtResource("18_dudi0")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="logik/tafel/Area2D"]
polygon = PackedVector2Array(823, 323, 822, 302, 948, 428, 948, 447)

[node name="schliessen" type="Button" parent="logik/tafel"]
visible = false
offset_left = 392.0
offset_top = 432.0
offset_right = 640.0
offset_bottom = 464.0
theme_override_constants/outline_size = 5
text = "Schließen"

[node name="CD" type="Node2D" parent="logik"]

[node name="EKey" type="Sprite2D" parent="logik/CD"]
visible = false
position = Vector2(160, 381)
scale = Vector2(0.365, 0.365)
texture = ExtResource("6_f0nvo")

[node name="Cd" type="Sprite2D" parent="logik/CD"]
position = Vector2(163, 482)
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_ehfqm")

[node name="Area2D" type="Area2D" parent="logik/CD"]
collision_layer = 4
collision_mask = 4
script = ExtResource("14_twcbh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="logik/CD/Area2D"]
position = Vector2(161, 478)
shape = SubResource("CircleShape2D_of1q4")

[node name="minigame" type="Node2D" parent="logik"]
process_mode = 3

[node name="player_small" parent="logik/minigame" instance=ExtResource("20_24am0")]
visible = false
position = Vector2(409, 95)
scale = Vector2(0.175, 0.175)

[node name="ziel_area" type="Area2D" parent="logik/minigame"]
collision_layer = 8
collision_mask = 8
script = ExtResource("21_tyt5f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="logik/minigame/ziel_area"]
position = Vector2(386, 269)
shape = SubResource("RectangleShape2D_jkbbg")

[node name="walls" type="StaticBody2D" parent="logik/minigame"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_db4pr")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_3s0c4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_rrmnj")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_6v8em")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_kvlqp")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_vv50e")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_7y3y1")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_7n0ib")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_wswvg")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_c4msv")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_p02ow")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_urdnu")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_jyybj")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_r4r00")

[node name="CollisionShape2D15" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_b80xn")

[node name="CollisionShape2D16" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_lsost")

[node name="CollisionShape2D17" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_wravn")

[node name="CollisionShape2D18" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_k5hca")

[node name="CollisionShape2D19" type="CollisionShape2D" parent="logik/minigame/walls"]
shape = SubResource("SegmentShape2D_70ljj")

[connection signal="body_entered" from="logik/stickynote/Area2D" to="logik/stickynote/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="logik/stickynote/Area2D" to="logik/stickynote/Area2D" method="_on_body_exited"]
[connection signal="pressed" from="logik/stickynote/schliessen" to="logik/stickynote/Area2D" method="_on_schliessen_pressed"]
[connection signal="body_entered" from="logik/door/Area2D" to="logik/door/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="logik/door/Area2D" to="logik/door/Area2D" method="_on_body_exited"]
[connection signal="body_entered" from="logik/computer_schueler/Area2D" to="logik/computer_schueler/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="logik/computer_schueler/Area2D" to="logik/computer_schueler/Area2D" method="_on_body_exited"]
[connection signal="pressed" from="logik/computer_schueler/schliessen" to="logik/computer_schueler/Area2D" method="_on_schliessen_pressed"]
[connection signal="pressed" from="logik/computer_schueler/login/einloggen" to="logik/computer_schueler/Area2D" method="_on_einloggen_pressed"]
[connection signal="body_entered" from="logik/tafel/Area2D" to="logik/tafel/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="logik/tafel/Area2D" to="logik/tafel/Area2D" method="_on_body_exited"]
[connection signal="pressed" from="logik/tafel/schliessen" to="logik/tafel/Area2D" method="_on_schliessen_pressed"]
[connection signal="body_entered" from="logik/CD/Area2D" to="logik/CD/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="logik/CD/Area2D" to="logik/CD/Area2D" method="_on_body_exited"]
[connection signal="body_entered" from="logik/minigame/ziel_area" to="logik/computer_schueler/Area2D" method="_on_ziel_area_body_entered"]
